# PicoDB

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: MathEngine.hpp  Parser.hpp  Serializer.hpp  Storage.hpp  Types.hpp
tests/: test.py
